--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ futures = "0.3"
 helius-laserstream = "0.1.5"
 tokio = { version = "1.0", features = ["sync", "macros"] }
 tracing = "0.1"
+
+[dev-dependencies]
+bs58 = "0.5.1"
